RESOLVED FIXED131805
[New Multicolumn] Nested columns not working at all.
https://bugs.webkit.org/show_bug.cgi?id=131805
Summary [New Multicolumn] Nested columns not working at all.
Dave Hyatt
Reported 2014-04-17 13:25:29 PDT
The old multi-column code could at least handle nested columns as an unsplittable unit. The new code should do the same. Right now it is dropping them completely, which will undoubtedly cause regressions in children's books in iBooks.
Attachments
Patch (13.12 KB, patch)
2014-04-22 16:39 PDT, Dave Hyatt
no flags
Patch (22.75 KB, patch)
2014-04-22 18:04 PDT, Dave Hyatt
no flags
Patch (22.67 KB, patch)
2014-04-22 19:28 PDT, Dave Hyatt
dino: review+
Radar WebKit Bug Importer
Comment 1 2014-04-17 23:12:56 PDT
Dave Hyatt
Comment 2 2014-04-21 13:43:40 PDT
This is a blocker for turning the new columns on.
Dave Hyatt
Comment 3 2014-04-22 13:22:42 PDT
This is the challenging one. I wish I knew if iBooks depends on this or not.
Dave Hyatt
Comment 4 2014-04-22 16:39:09 PDT
Created attachment 229923 [details] Patch Work in progress. Everything working now except for transparency. I need to patch bounding box for that to know how to recur.
Dave Hyatt
Comment 5 2014-04-22 18:04:22 PDT
WebKit Commit Bot
Comment 6 2014-04-22 18:06:19 PDT
Attachment 229935 [details] did not pass style-queue: ERROR: Source/WebCore/rendering/RenderLayer.h:714: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/rendering/RenderLayer.cpp:4312: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] Total errors found: 2 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dave Hyatt
Comment 7 2014-04-22 19:28:28 PDT
Dave Hyatt
Comment 8 2014-04-23 11:06:10 PDT
Fixed in r167714.
Note You need to log in before you can comment on or make changes to this bug.